Se creó con Colab y se actualizo

--- a/algoritmos/logicaComputacional.ipynb
+++ b/algoritmos/logicaComputacional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Xc4ZimTzLw9uiHId0O6k",
+      "authorship_tag": "ABX9TyPco4XItEvmdEl+4uzxFTG7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/darwinyusef/ejerciciosAlgoritmos/blob/master/algoritmos/logicaComputacional.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Diagrama de lógica computacional\n",
+        "\n",
+        "La lógica computacional es la aplicación de principios de la lógica matemática en el ámbito de las ciencias de la computación. Es esencial en diversas áreas, como el diseño de circuitos electrónicos, la programación y la optimización de algoritmos. Por ejemplo, en los circuitos digitales, se emplean compuertas lógicas que operan según reglas booleanas para procesar señales eléctricas. En la programación, la lógica computacional permite desarrollar algoritmos eficientes y correctos, facilitando la resolución de problemas complejos mediante estructuras lógicas bien definidas.\n",
+        "\n",
+        "\n",
+        "![Lógica Computacional](https://github.com/darwinyusef/ejerciciosAlgoritmos/blob/master/algoritmos/logicacomputacional.PNG?raw=true)\n",
+        "\n",
+        "\n",
+        "Si quieres mas información revisa este video\n",
+        "[Lógica computacional video explicativo en la matemática](https://www.youtube.com/watch?v=vKe0UKSpNQQ)"
+      ],
+      "metadata": {
+        "id": "DldoqRARxbm9"
+      }
     },
     {
       "cell_type": "code",
